src/test/ui/traits/multidispatch-convert-ambig-dest.stderr
error[E0282]: type annotations needed
  --> $DIR/multidispatch-convert-ambig-dest.rs:26:5
   |
LL |     test(22, std::default::Default::default());
   |     ^^^^ cannot infer type for type parameter `U` declared on the function `test`

error[E0283]: type annotations needed
  --> $DIR/multidispatch-convert-ambig-dest.rs:26:5
   |
LL |     test(22, std::default::Default::default());
   |     ^^^^ cannot infer type for type parameter `U` declared on the function `test`
   |
note: multiple `impl`s satisfying `i32: Convert<_>` found
  --> $DIR/multidispatch-convert-ambig-dest.rs:8:1
   |
LL | impl Convert<i8> for i32 {
   | ^^^^^^^^^^^^^^^^^^^^^^^^
...
LL | impl Convert<i16> for i32 {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^
note: required by a bound in `test`
  --> $DIR/multidispatch-convert-ambig-dest.rs:21:11
   |
LL | fn test<T,U>(_: T, _: U)
   |    ---- required by a bound in this
LL | where T : Convert<U>
   |           ^^^^^^^^^^ required by this bound in `test`
help: consider specifying the type arguments in the function call
   |
LL |     test::<T, U>(22, std::default::Default::default());
   |         ++++++++

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0282, E0283.
For more information about an error, try `rustc --explain E0282`.
